--- a/07-test-vite/index.html
+++ b/07-test-vite/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="content">
+      233
+      <div class="main">main</div>
+    </div>
     <script src="./main.js" type="module"></script>
   </body>
 </html>
