--- a/lastPlugin/index.html
+++ b/lastPlugin/index.html
@@ -4,13 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title><%= title %></title>
+		<title>Document</title>
 	</head>
 	<body>
-		<div class="content">
-			233
-			<div class="main">main</div>
-		</div>
 		<script src="./main.js" type="module"></script>
 	</body>
 </html>
